@@ -1,3 +1,8 @@
+2008-08-20  Pedro Alves  <pedro@codesourcery.com>
+
+	* gdb.base/pending.exp: Test pending breakpoints without symbols
+	loaded.
+
 2008-08-19  Vladimir Prus  <vladimir@codesourcery.com>
 
 	* lib/mi-support.exp (mi_expect_stop): Produce
